--- a/styles/style.css
+++ b/styles/style.css
@@ -17,19 +17,19 @@
   display: flex;
   gap: 32px;
   list-style: circle;
-  margin-top: 4px;
+  margin-bottom: 1px;
   margin-left: 1px;
 }
 
-.header__menu-link {
+.header__link {
   color: #000;
   font-size: 18px;
   line-height: normal;
   text-underline-position: under;
 }
 
-.header__menu-link-nomark,
-.header__menu-link-home {
+.header__links-list-item_no-bullit,
+.header__link_active {
   color: #000;
   font-size: 18px;
   list-style: none;
@@ -38,7 +38,7 @@
 
 .header__logo {
   display: block;
-  width: 138px;
+  width: 135px;
   height: 105px;
   justify-self: center;
   align-self: center;
@@ -51,7 +51,7 @@
 .header__contacts {
   align-self: center;
   justify-self: end;
-  margin-top: 3px;
+  margin-bottom: 1px;
   margin-right: 3px;
 }
 
@@ -61,4 +61,97 @@
   font-size: 18px;
   text-underline-position: under;
   line-height: 24.3px;
+}
+
+.cover {
+  position: relative;
+  background-image: url("../images/cover.jpg");
+  width: 1440px;
+  height: 757px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 165px 50px 237px 50px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6000000238418579;
+  background-color: #000000;
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 1.15;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.accent-span {
+  display: block;
+}
+
+.text_center {
+  line-height: 100%;
+  text-align: center;
+}
+
+.text_right {
+  line-height: 100%;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.form-content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 78px;
+  padding: 135px 0 0;
+}
+.text-style {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; 
+  text-transform: uppercase;
+  letter-spacing: normal;
+}
+.form-item {
+  display: block;
+}
+.text {
+  display: block;
+  justify-content: center;
+  line-height: 1.27;
+  word-spacing: 18px;
+}
+.button {
+  width: 257px;
+  height: 52px;
+  border: 1px solid #fff;
+  background: transparent;
 }
