--- a/styles/style.css
+++ b/styles/style.css
@@ -247,10 +247,61 @@
 }
 
 .lots__look-more-link {
-  padding-top:30px;
+  padding-top: 30px;
   padding-left: 40px;
   height: 55px;
   font-size: 20px;
   text-decoration-line: underline;
   text-underline-position: under;
+}
+
+.about {
+  display: grid;
+  width: 1340px;
+  grid-template-columns: 430px 1fr;
+  grid-template-rows: 487px;
+  gap: 25px;
+  padding: 179px 0px;
+}
+
+.about__logo {
+  display: flex;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 95px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+.about__title {
+  padding: 102px 0 99px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about__text {
+  width: auto;
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
