--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 .content-section {
-  
   width: 100%;
   margin: 0 auto;
 }
@@ -7,17 +6,15 @@
 .header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(1, 109px);
   place-content: center space-evenly;
   place-items: center start;
-  width: 1440px;
-  padding: 92px 49px 92px 51px;
+  max-width: 1440px;
+  padding: 90px 51px;
 }
 
 .header__menu-list {
   display: flex;
   gap: 32px;
-  list-style: circle;
   margin-bottom: 1px;
   margin-left: 0px;
 }
@@ -29,11 +26,15 @@
   text-underline-position: under;
 }
 
-.header__links-list-item_no-bullit,
-.header__link_active {
-  color: #000;
-  font-size: 18px;
+.header__menu-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
   list-style: none;
+}
+
+.header__link_active {
   text-decoration: none;
 }
 
@@ -66,12 +67,11 @@
 .cover {
   position: relative;
   background-image: url("../images/cover.jpg");
-  width: 1440px;
-  height: 757px;
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 165px 50px 237px 50px;
+  padding: 166px 50px 50px 50px;
 }
 
 .overlay {
@@ -133,7 +133,7 @@
 
 .text-style {
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -155,20 +155,21 @@
 
 .button {
   width: 257px;
-  height: 52px;
-  border: 1px solid #fff;
+  min-height: 52px;
+  color: #fff;
+  border: 1px solid currentColor;
   background: transparent;
 }
 
 .lots {
-  
-  width: 1340px;
-  height: 579px;
+  max-width: 1340px;
+  min-height: 579px;
   margin-top: 180px;
 }
+
 .title_section {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -178,21 +179,23 @@
 }
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   gap: 25px;
   list-style: none;
+  
 }
 
 .card__title {
   position: relative;
   z-index: 1;
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%; /* 26.4px */
+  line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
 }
@@ -201,7 +204,7 @@
   position: relative;
   z-index: 1;
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -212,30 +215,29 @@
 .lots__card-list-item {
   position: relative;
   background-size: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  flex-grow: 1;
 }
 
 .card_type_film {
   background-image: url("../images/card-lot-01.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url("../images/card-lot-02.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .card-link {
   display: block;
   height: 100%;
   text-decoration: none;
+  
 }
 
 .card {
@@ -243,7 +245,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 430px;
-  height: 450px;
+  min-height: 450px;
   padding: 50px 40px 50px 40px;
   flex-wrap: wrap;
 }
@@ -251,7 +253,7 @@
 .lots__look-more-link {
   padding-top: 30px;
   padding-left: 40px;
-  height: 55px;
+  min-height: 55px;
   font-size: 20px;
   text-decoration-line: underline;
   text-underline-position: under;
@@ -259,9 +261,8 @@
 
 .about {
   display: grid;
-  width: 1340px;
+  max-width: 1340px;
   grid-template-columns: 430px 1fr;
-  grid-template-rows: 487px;
   gap: 25px;
   padding: 179px 0px;
 }
@@ -288,16 +289,17 @@
   gap: 27px;
   width: auto;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
+
 .about__title {
   padding: 102px 0 99px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -306,12 +308,14 @@
 }
 
 .footer {
-  width: 1340px;
+  max-width: 1340px;
   display: flex;
   justify-content: space-between;
   padding: 2px 0;
 }
+
 .footer__contacts {
+  max-width: 240px;
   align-self: center;
   justify-self: end;
   margin-bottom: 1px;
