--- a/styles/style.css
+++ b/styles/style.css
@@ -49,11 +49,13 @@
   width: 100%;
 }
 
-.header__contacts {
+.contacts {
+  font-style: normal;
   align-self: center;
   justify-self: end;
-  margin-bottom: 1px;
-  margin-right: 3px;
+  margin-bottom: 3px;
+  margin-right: -11px;
+  max-width: 250px;
 }
 
 .header__contacts-link {
@@ -163,7 +165,6 @@
 
 .lots {
   max-width: 1340px;
-  min-height: 579px;
   margin-top: 180px;
 }
 
@@ -212,6 +213,7 @@
 }
 
 .lots__card-list-item {
+  width: 430px;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -241,7 +243,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 430px;
   min-height: 450px;
   padding: 50px 40px 50px 40px;
   flex-wrap: wrap;
@@ -250,7 +251,6 @@
 .lots__look-more-link {
   padding-top: 30px;
   padding-left: 40px;
-  min-height: 55px;
   font-size: 20px;
   text-decoration-line: underline;
   text-underline-position: under;
@@ -261,7 +261,7 @@
   max-width: 1340px;
   grid-template-columns: 430px 1fr;
   gap: 25px;
-  padding: 179px 0px;
+  padding: 180px 0px;
 }
 
 .about__logo {
@@ -308,15 +308,8 @@
   max-width: 1340px;
   display: flex;
   justify-content: space-between;
-  padding: 2px 0;
-}
-
-.footer__contacts {
-  max-width: 240px;
-  align-self: center;
-  justify-self: end;
-  margin-bottom: 1px;
-  margin-right: 3px;
+  margin-top: 0;
+  margin-bottom: 90px;
 }
 
 .footer__contacts-link {
