--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 .content-section {
   width: 100%;
   margin: 0 auto;
+
 }
 
 .header {
@@ -53,7 +54,7 @@
   font-style: normal;
   align-self: center;
   justify-self: end;
-  margin-bottom: 3px;
+  margin-bottom: 0;
   margin-right: -11px;
   max-width: 250px;
 }
